Fix job dependency

--- a/.github/workflows-src/jobs.lib.yml
+++ b/.github/workflows-src/jobs.lib.yml
@@ -14,7 +14,6 @@ env: &env
 #@ def jobs_genversion():
 name: "Generate Version"
 runs-on: ubuntu-latest
-strategy: *strategy
 env: *env
 timeout-minutes: 10
 steps:
@@ -28,7 +27,7 @@ steps:
 
 #@ def jobs_build():
 name: Build
-needs: [ generate_version ]
+needs: [ genversion ]
 strategy: *strategy
 runs-on: *runs-on
 env: *env
