--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,14 +12,6 @@ jobs:
   genversion:
     name: Generate Version
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        go-version:
-        - 1.13.x
-        platform:
-        - ubuntu-latest
-        - macos-latest
-        - windows-latest
     env:
       ACTIVESTATE_CLI_DISABLE_RUNTIME: true
       GOFLAGS: -mod=vendor
@@ -51,7 +43,7 @@ jobs:
   build:
     name: Build
     needs:
-    - generate_version
+    - genversion
     strategy:
       matrix:
         go-version:
