--- a/activestate.yaml
+++ b/activestate.yaml
@@ -137,41 +137,20 @@ scripts:
     if: eq .OS.Name "Windows"
     value: |
       set -e
-      if [ "$#" -ne 4 ]; then
-        echo "Required Arguments: <Owner/Name> <Version> <Release Notes URL> <Shortcuts> (comma-separated list of shortcuts to build)"
-        exit 1
-      fi
+
+      PROJECT_OWNER_NAME=${1:-ActiveState/ActivePerl-5.26}
+      PROJECT_NAME=${PROJECT_OWNER_NAME##*/}
 
       export GOFLAGS='-mod=vendor'
+
+      go run ./scripts/msi-installer-builder $*
+
       dir=$(cmd //C echo %CD%)
-      cp installers/msi-language/Product.p.wxs installers/msi-language/Product.wxs
-
-      pad () {
-        string=$1
-
-        # Use base length that avoids string overflow warnings from wix
-        # Subtract string length and brackets
-        padLength=$((246-${#string}-4))
-        printf -v pad '%*s' "$padLength"
-        padded=$(printf '%s' $1)$(echo ${pad// /-})
-        echo $padded
-      }
-
-      # Use both Org and project name for this replacement
-      sed -i "s^{{$(pad PROJECT_OWNER_AND_NAME)}}^${1}^g" installers/msi-language/Product.wxs
-
-      # Only use the project name for this replacement
-      sed -i "s^{{$(pad PROJECT_NAME)}}^${1##*/}^g" installers/msi-language/Product.wxs
-
-      sed -i "s^{{VERSION}}^${2}^g" installers/msi-language/Product.wxs
-      sed -i "s^{{$(pad REL_NOTES)}}^${3}^g" installers/msi-language/Product.wxs
-      sed -i "s^{{$(pad SHORTCUTS)}}^${4}^g" installers/msi-language/Product.wxs
-      sed -i "s^{{ID}}^$(go run scripts/uuid-generator/main.go $1)^g" installers/msi-language/Product.wxs
-      sed -i "s^{{ICON}}^./assets/perl.ico^g" installers/msi-language/Product.wxs
 
       msbuild.exe installers/msi-language/Deploy.wixproj /target:Build "//p:Configuration=Release;Platform=x64;RunWixToolsOutOfProc=true;OutDir=$dir\\build\\msi-language\\"
-      echo "Copying MSI to build/msi/${1##*/}.msi"
-      cp build/msi-language/en-us/Deploy.msi "build/msi/${1##*/}.msi"
+      echo "Copying MSI to build/msi/${PROJECT_NAME}.msi"
+      mkdir -p build/msi
+      cp build/msi-language/en-us/Deploy.msi "build/msi/${PROJECT_NAME}.msi"
   - name: build-base-language-msi
     description: |
       Builds the language MSI with no project information, requires that you have .NET 4.x installed and on PATH.
@@ -183,15 +162,12 @@ scripts:
 
       export GOFLAGS='-mod=vendor'
       dir=$(cmd //C echo %CD%)
-      cp installers/msi-language/Product.p.wxs installers/msi-language/Product.wxs
 
-      # We require a product ID in order to build an MSI
-      sed -i "s^{{ID}}^{FFFFFFFF-FFFF-FFFF-FFFF-FFFFFFFFFFFF}^g" installers/msi-language/Product.wxs
-      sed -i "s^{{VERSION}}^255.255.255^g" installers/msi-language/Product.wxs
-      sed -i "s^{{ICON}}^./assets/as.ico^g" installers/msi-language/Product.wxs
+      go run ./scripts/msi-installer-builder base
 
       msbuild.exe installers/msi-language/Deploy.wixproj /target:Build "//p:Configuration=Release;Platform=x64;RunWixToolsOutOfProc=true;OutDir=$dir\\build\\msi-language\\"
       echo "Copying MSI to build/msi/base.msi"
+      mkdir -p build/msi
       cp build/msi-language/en-us/Deploy.msi "build/msi/base.msi"
   - name: build-workflows
     Description: Generates our github workflows
