--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,8 @@ name: Build-Test-Deploy
     - synchronize
     - reopened
 jobs:
-  genversion:
-    name: Generate Version
+  prepare:
+    name: Prepare
     runs-on: ubuntu-latest
     env:
       ACTIVESTATE_CLI_DISABLE_RUNTIME: true
@@ -21,6 +21,13 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+    - name: Validate
+      shell: bash
+      run: |
+        if [ "${GITHUB_REF##*/}" != "master" ] && [ "${{ contains(toJson(github.event.pull_request.labels), 'version:') }}" != "true" ]; then
+          echo "Version label must be set"
+          exit 1
+        fi
     - name: Install Go
       uses: actions/setup-go@v2
       with:
@@ -43,7 +50,7 @@ jobs:
   build:
     name: Build
     needs:
-    - genversion
+    - prepare
     strategy:
       matrix:
         go-version:
@@ -177,7 +184,7 @@ jobs:
         - windows-latest
     runs-on: ${{ matrix.platform }}
     needs:
-    - genversion
+    - prepare
     env:
       ACTIVESTATE_CLI_DISABLE_RUNTIME: true
       GOFLAGS: -mod=vendor
@@ -278,13 +285,6 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-    - name: Validate
-      shell: bash
-      run: |
-        if [ "${GITHUB_REF##*/}" != "master" ] && [ "${{ contains(toJson(github.event.pull_request.labels), 'version:') }}" != "true" ]; then
-          echo "Version label must be set"
-          exit 1
-        fi
     - name: Install Go
       uses: actions/setup-go@v2
       with:
