Trial fail-fast=false in ci, run build-workflows

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -6,6 +6,7 @@ jobs:
   inttest:
     name: Integration Test
     strategy:
+      fail-fast: false
       matrix:
         go-version:
         - 1.13.x
