--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
   build:
     name: Build
     strategy:
+      fail-fast: false
       matrix:
         go-version:
         - 1.13.x
@@ -131,6 +132,7 @@ jobs:
   unittest:
     name: Unit Test
     strategy:
+      fail-fast: false
       matrix:
         go-version:
         - 1.13.x
@@ -174,6 +176,7 @@ jobs:
     if: contains(github.event.pull_request.labels.*.name, 'run integration tests')
     name: Integration Test
     strategy:
+      fail-fast: false
       matrix:
         go-version:
         - 1.13.x
