--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -54,7 +54,7 @@ run: |
 name: "Unit Tests"
 shell: bash
 run: |
-  go test `go list ./... | grep -v api | grep -v integration | grep -v expect`
+  go test -run=TestActivePerl `go list ./... | grep -v api | grep -v integration | grep -v expect`
 #@ end
 ---
 #@ def steps_inttest():
