--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -171,7 +171,7 @@ jobs:
     - name: Unit Tests
       shell: bash
       run: |
-        go test -run="TestActivePerl/.*" `go list ./... | grep -v api | grep -v integration | grep -v expect`
+        go test `go list ./... | grep -v api | grep -v integration | grep -v expect`
   inttest:
     if: contains(github.event.pull_request.labels.*.name, 'run integration tests')
     name: Integration Test
@@ -217,7 +217,7 @@ jobs:
       run: state run build
     - name: Integration Tests
       shell: bash
-      run: go test -timeout 20m ./test/integration -v
+      run: go test --run="TestActivePerl/.*" timeout 20m ./test/integration -v
       env:
         INTEGRATION_TEST_USERNAME: ${{ secrets.INTEGRATION_TEST_USERNAME }}
         INTEGRATION_TEST_PASSWORD: ${{ secrets.INTEGRATION_TEST_PASSWORD }}
