--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
     - name: Upload Session Artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: session-build
+        name: session-build-${{ matrix.platform }}
         path: build/
   build_msi:
     name: Build MSI's
@@ -84,7 +84,7 @@ jobs:
     - name: Download Session Artifacts
       uses: actions/download-artifact@v2
       with:
-        name: session-build
+        name: session-build-${{ matrix.platform }}
         path: build/
     - name: Install Go
       uses: actions/setup-go@v2
@@ -125,7 +125,7 @@ jobs:
     - name: Upload Session Artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: session-build
+        name: session-build-${{ matrix.platform }}
         path: build/
   unittest:
     name: Unit Test
@@ -251,10 +251,9 @@ jobs:
         echo "Adding $bin to PATH"
         echo "::add-path::$bin"
         printenv
-    - name: Download Session Artifacts
+    - name: Download All Session Artifacts
       uses: actions/download-artifact@v2
       with:
-        name: session-build
         path: build/
     - name: Preprocess
       shell: bash
@@ -277,9 +276,11 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     - name: Cleanup Session Artifacts
       uses: geekyeggo/delete-artifact@v1
-      if: always()
       with:
-        name: session-build
+        name: |
+          session-build-ubuntu-latest
+          session-build-macos-latest
+          session-build-windows-latest
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
       with:
