--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -219,7 +219,9 @@ jobs:
       run: state run build
     - name: Integration Tests
       shell: bash
-      run: go test --run="TestActivePerl/.*" --timeout 20m ./test/integration -v
+      run: |
+        ls -l ./build/msi
+        go test --run="TestActivePerl/.*" --timeout 20m ./test/integration -v
       env:
         INTEGRATION_TEST_USERNAME: ${{ secrets.INTEGRATION_TEST_USERNAME }}
         INTEGRATION_TEST_PASSWORD: ${{ secrets.INTEGRATION_TEST_PASSWORD }}
