Add artifact downloading to integ test ci step

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -47,6 +47,11 @@ jobs:
     - name: Build
       shell: bash
       run: state run build
+    - name: Download Artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: build
+        path: build/
     - name: Integration Tests
       shell: bash
       run: |
