--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -92,6 +92,14 @@ with:
   path: build/
 #@ end
 ---
+#@ def steps_downloadartifacts():
+name: "Download Artifacts"
+uses: actions/download-artifact@v2
+with:
+  name: build
+  path: build/
+#@ end
+---
 #@ def steps_deletesessartifacts():
 name: "Cleanup Session Artifacts"
 uses: geekyeggo/delete-artifact@v1
