--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -23,6 +23,18 @@ env:
   MSI_CERT_BASE64: ${{ secrets.MSI_CERT_BASE64 }}
 #@ end
 ---
+#@ def steps_sign_installscript():
+name: "Sign install.PS1"
+if: matrix.os == 'windows-latest'
+shell: powershell
+run: |
+   $cert = New-Object System.Security.Cryptography.X509Certificates.X509Certificate2
+   $cert.Import('Cert.p12',$env:CODE_SIGNING_PASSWD,'DefaultKeySet')
+   Set-AuthenticodeSignature -FilePath installers\install.ps1 -Certificate $cert
+env:
+  CODE_SIGNING_PASSWD: ${{ secrets.CODE_SIGNING_PASSWD }}
+#@ end
+---
 #@ def steps_genupdate():
 name: "Generate Update"
 shell: bash
