--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,6 +109,7 @@ jobs:
       shell: bash
       run: state run generate-update
     - name: Build State MSI
+      if: matrix.os == 'windows-latest'
       shell: bash
       run: |
         echo $MSI_CERT_BASE64 | base64 --decode > Cert.p12
@@ -120,6 +121,7 @@ jobs:
         CODE_SIGNING_PASSWD: ${{ secrets.CODE_SIGNING_PASSWD }}
         MSI_CERT_BASE64: ${{ secrets.MSI_CERT_BASE64 }}
     - name: Build Languages MSI
+      if: matrix.os == 'windows-latest'
       shell: bash
       run: |
         echo $MSI_CERT_BASE64 | base64 --decode > Cert.p12
