Use runner.os instead

--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -13,7 +13,7 @@ run: state run build
 #@ def steps_sign():
 name: Sign
 shell: bash
-if: matrix.os == 'windows-latest'
+if: runner.os == 'Windows'
 run: |
   echo $MSI_CERT_BASE64 | base64 --decode > Cert.p12
   export PATH=/c/Program\ Files\ \(x86\)/WiX\ Toolset\ v3.11/bin/:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
@@ -25,7 +25,7 @@ env:
 ---
 #@ def steps_sign_installscript():
 name: "Sign install.PS1"
-if: matrix.os == 'windows-latest'
+if: runner.os == 'Windows'
 shell: powershell
 run: |
    $cert = New-Object System.Security.Cryptography.X509Certificates.X509Certificate2
