--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,7 +97,7 @@ jobs:
       run: state run build
     - name: Sign
       shell: bash
-      if: matrix.os == 'windows-latest'
+      if: runner.os == 'Windows'
       run: |
         echo $MSI_CERT_BASE64 | base64 --decode > Cert.p12
         export PATH=/c/Program\ Files\ \(x86\)/WiX\ Toolset\ v3.11/bin/:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
@@ -106,7 +106,7 @@ jobs:
         CODE_SIGNING_PASSWD: ${{ secrets.CODE_SIGNING_PASSWD }}
         MSI_CERT_BASE64: ${{ secrets.MSI_CERT_BASE64 }}
     - name: Sign install.PS1
-      if: matrix.os == 'windows-latest'
+      if: runner.os == 'Windows'
       shell: powershell
       run: |
         $cert = New-Object System.Security.Cryptography.X509Certificates.X509Certificate2
