--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -13,7 +13,7 @@ run: state run build
 #@ def steps_sign():
 name: Sign
 shell: bash
-if: matrix.os == 'windows-latest'
+if: runner.os == 'Windows'
 run: |
   echo $MSI_CERT_BASE64 | base64 --decode > Cert.p12
   export PATH=/c/Program\ Files\ \(x86\)/WiX\ Toolset\ v3.11/bin/:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
@@ -154,7 +154,7 @@ env:
 ---
 #@ def steps_build_state_msi():
 name: "Build State MSI"
-if: matrix.os == 'windows-latest'
+if: runner.os == 'Windows'
 shell: bash
 run: |
   echo $MSI_CERT_BASE64 | base64 --decode > Cert.p12
@@ -169,7 +169,7 @@ env:
 ---
 #@ def steps_build_languages_msi():
 name: "Build Languages MSI"
-if: matrix.os == 'windows-latest'
+if: runner.os == 'Windows'
 shell: bash
 run: |
   echo $MSI_CERT_BASE64 | base64 --decode > Cert.p12
