--- a/activestate.yaml
+++ b/activestate.yaml
@@ -76,12 +76,19 @@ scripts:
     value: |
       set -e
       go run scripts/s3-deployer/main.go build/update ca-central-1 cli-update update/state
+  - name: build-install-scripts
+    language: bash
+    standalone: true
+    description: Copies install scripts to build dir, this script exists for transparency with CI behavior
+    value: |
+      cp installers/install.sh build/install.sh
+      cp installers/install.ps1 build/install.ps1
   - name: deploy-installers
     language: bash
     description: Deploys update files to S3. This steps is automated by CI and should never be ran manually unless you KNOW WHAT YOU'RE DOING.
     value: |
-      go run scripts/s3-deployer/main.go installers/install.sh ca-central-1 cli-update update/state/install.sh
-      go run scripts/s3-deployer/main.go installers/install.ps1 ca-central-1 cli-update update/state/install.ps1
+      go run scripts/s3-deployer/main.go build/install.sh ca-central-1 cli-update update/state/install.sh
+      go run scripts/s3-deployer/main.go build/install.ps1 ca-central-1 cli-update update/state/install.ps1
       go run scripts/s3-deployer/main.go build/msi us-east-1 cli-msi /
   - name: generate-api-client
     language: bash
