--- a/.github/workflows-src/jobs.lib.yml
+++ b/.github/workflows-src/jobs.lib.yml
@@ -1,4 +1,4 @@
-#@ load("steps.lib.yml", "steps_genversion", "steps_preprocess", "steps_build", "steps_genupdate", "steps_installgo", "steps_setup", "steps_test", "steps_inttest", "steps_uploadsharedartifacts", "steps_downloadsharedartifacts", "steps_uploadartifacts", "steps_uploadsessartifacts", "steps_downloadsessartifacts", "steps_downloadallsessartifacts", "steps_deletesessartifacts", "steps_deploy", "steps_build_state_msi", "steps_build_languages_msi", "steps_cleanbuild", "steps_validate", "steps_sign")
+#@ load("steps.lib.yml", "steps_genversion", "steps_preprocess", "steps_build", "steps_genupdate", "steps_installgo", "steps_setup", "steps_test", "steps_inttest", "steps_uploadsharedartifacts", "steps_downloadsharedartifacts", "steps_uploadartifacts", "steps_uploadsessartifacts", "steps_downloadsessartifacts", "steps_downloadallsessartifacts", "steps_deletesessartifacts", "steps_deploy", "steps_build_state_msi", "steps_build_languages_msi", "steps_cleanbuild", "steps_validate", "steps_sign", "steps_sanitizeallsessartifacts")
 
 strategy: &strategy
   matrix:
@@ -93,6 +93,7 @@ steps:
   - #@ steps_installgo()
   - #@ steps_setup()
   - #@ steps_downloadallsessartifacts()
+  - #@ steps_sanitizeallsessartifacts()
   - #@ steps_preprocess()
   - #@ steps_cleanbuild()
   - #@ steps_deploy()
