--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -111,6 +111,14 @@ with:
   path: build/
 #@ end
 ---
+#@ def steps_sanitizeallsessartifacts():
+name: "Sanitize All Session Artifacts"
+shell: bash
+run: |
+  find . -mindepth 2 -maxdepth 2 -print0 | xargs -0 -I file rsync -av file .
+  rm -Rf session*
+#@ end
+---
 #@ def steps_downloadsessartifacts():
 name: "Download Session Artifacts"
 uses: actions/download-artifact@v2
