--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -133,6 +133,7 @@ with:
 name: "Sanitize All Session Artifacts"
 shell: bash
 run: |
+  cd build
   find . -mindepth 2 -maxdepth 2 -print0 | xargs -0 -I file rsync -av file .
   rm -Rf session*
 #@ end
