--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -282,6 +282,7 @@ jobs:
     - name: Sanitize All Session Artifacts
       shell: bash
       run: |
+        cd build
         find . -mindepth 2 -maxdepth 2 -print0 | xargs -0 -I file rsync -av file .
         rm -Rf session*
     - name: Preprocess
