--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -114,9 +114,9 @@ jobs:
         echo $MSI_CERT_BASE64 | base64 --decode > Cert.p12
         export PATH=/c/Program\ Files\ \(x86\)/Microsoft\ Visual\ Studio/2019/Enterprise/MSBuild/Current/Bin/:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
         export SHELL=bash
-        state run build-msi-language ActiveState/ActivePerl-5.26 5.26.3001 http://docs.activestate.com/activeperl/5.26/get/relnotes/ PerlCritic,CmdPrompt
+        state run build-msi-language Perl ActiveState/ActivePerl-5.26 5.26.3001
         signtool.exe sign -d "ActiveState Language Installer" -f "Cert.p12" -p ${CODE_SIGNING_PASSWD} ./build/msi/ActivePerl-5.26.msi
-        state run build-msi-language ActiveState/ActivePerl-5.28 5.28.1001 http://docs.activestate.com/activeperl/5.28/get/relnotes/ PerlCritic,CmdPrompt
+        state run build-msi-language Perl ActiveState/ActivePerl-5.28 5.28.1001
         signtool.exe sign -d "ActiveState Language Installer" -f "Cert.p12" -p ${CODE_SIGNING_PASSWD} ./build/msi/ActivePerl-5.28.msi
         state run build-base-language-msi
       env:
