--- a/activestate.yaml
+++ b/activestate.yaml
@@ -172,6 +172,7 @@ scripts:
   - name: build-workflows
     Description: Generates our github workflows
     value: |
+      set -e
       if ! type "ytt" &> /dev/null; then
         pushd ~
         go get github.com/k14s/ytt/cmd/ytt
