Run build-workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -230,7 +230,7 @@ jobs:
     - name: Download Session Artifacts
       uses: actions/download-artifact@v2
       with:
-        name: session-build
+        name: session-build-${{ matrix.platform }}
         path: build/
     - name: Install Go
       uses: actions/setup-go@v2
