--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -223,7 +223,7 @@ jobs:
       GITHUB_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     timeout-minutes: 25
     needs:
-    - build_msi
+    - build
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
