--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -22,7 +22,7 @@ jobs:
       GITHUB_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     timeout-minutes: 25
     needs:
-    - build_msi
+    - build
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
