Make msis executable in ci inttest

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -56,6 +56,7 @@ jobs:
       shell: bash
       run: |
         ls -l ./build/msi
+        chmod +x ./build/msi/*.msi
         go test --run="TestActivePerl/.*" --timeout 20m ./test/integration -v
       env:
         INTEGRATION_TEST_USERNAME: ${{ secrets.INTEGRATION_TEST_USERNAME }}
