--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -153,56 +153,6 @@ jobs:
       with:
         name: session-build-${{ matrix.platform }}
         path: build/
-  unittest:
-    name: Unit Test
-    strategy:
-      fail-fast: false
-      matrix:
-        go-version:
-        - 1.13.x
-        platform:
-        - ubuntu-latest
-        - macos-latest
-        - windows-latest
-    runs-on: ${{ matrix.platform }}
-    needs:
-    - prepare
-    env:
-      ACTIVESTATE_CLI_DISABLE_RUNTIME: true
-      GOFLAGS: -mod=vendor
-      SHELL: bash
-      GITHUB_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    timeout-minutes: 10
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Download Shared Artifacts
-      uses: actions/download-artifact@v2
-      with:
-        name: session-shared-build
-        path: build/
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ matrix.go-version }}
-    - name: Setup
-      shell: bash
-      run: |
-        bin=$(pwd)/.github/deps/${{ runner.os }}/bin
-        echo "Adding $bin to PATH"
-        echo "::add-path::$bin"
-        printenv
-    - name: Preprocess
-      shell: bash
-      run: |
-        if [[ "${GITHUB_REF##*/}" == "master" ]]; then
-          export BRANCH_OVERRIDE=unstable
-        fi
-        state run preprocess
-    - name: Unit Tests
-      shell: bash
-      run: |
-        go test `go list ./... | grep -v api | grep -v integration | grep -v expect`
   inttest:
     if: contains(github.event.pull_request.labels.*.name, 'run integration tests')
     name: Integration Test
@@ -211,11 +161,7 @@ jobs:
       matrix:
         go-version:
         - 1.13.x
-        platform:
-        - ubuntu-latest
-        - macos-latest
-        - windows-latest
-    runs-on: ${{ matrix.platform }}
+    runs-on: windows-latest
     env:
       ACTIVESTATE_CLI_DISABLE_RUNTIME: true
       GOFLAGS: -mod=vendor
@@ -262,6 +208,11 @@ jobs:
       env:
         INTEGRATION_TEST_USERNAME: ${{ secrets.INTEGRATION_TEST_USERNAME }}
         INTEGRATION_TEST_PASSWORD: ${{ secrets.INTEGRATION_TEST_PASSWORD }}
+    - name: Upload log Files
+      uses: actions/upload-artifact@v2
+      with:
+        name: session-build-${{ matrix.platform }}
+        path: ActivePerl*.log
   deploy:
     name: Deploy
     needs:
