--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -84,10 +84,7 @@ run: |
 #@ def steps_inttest():
 name: "Integration Tests"
 shell: bash
-run: |
-  ls -l ./build/msi
-  chmod +x ./build/msi/*.msi
-  go test --run="TestActivePerl/.*" --timeout 20m ./test/integration -v
+run: go test -timeout 20m ./test/integration -v
 env:
   INTEGRATION_TEST_USERNAME: ${{ secrets.INTEGRATION_TEST_USERNAME }}
   INTEGRATION_TEST_PASSWORD: ${{ secrets.INTEGRATION_TEST_PASSWORD }}
