--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,6 @@ jobs:
     needs:
     - prepare
     strategy:
-      fail-fast: false
       matrix:
         go-version:
         - 1.13.x
@@ -153,31 +152,76 @@ jobs:
       with:
         name: session-build-${{ matrix.platform }}
         path: build/
+  unittest:
+    name: Unit Test
+    strategy:
+      matrix:
+        go-version:
+        - 1.13.x
+        platform:
+        - ubuntu-latest
+        - macos-latest
+        - windows-latest
+    runs-on: ${{ matrix.platform }}
+    needs:
+    - prepare
+    env:
+      ACTIVESTATE_CLI_DISABLE_RUNTIME: true
+      GOFLAGS: -mod=vendor
+      SHELL: bash
+      GITHUB_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    timeout-minutes: 10
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Download Shared Artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: session-shared-build
+        path: build/
+    - name: Install Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: ${{ matrix.go-version }}
+    - name: Setup
+      shell: bash
+      run: |
+        bin=$(pwd)/.github/deps/${{ runner.os }}/bin
+        echo "Adding $bin to PATH"
+        echo "::add-path::$bin"
+        printenv
+    - name: Preprocess
+      shell: bash
+      run: |
+        if [[ "${GITHUB_REF##*/}" == "master" ]]; then
+          export BRANCH_OVERRIDE=unstable
+        fi
+        state run preprocess
+    - name: Unit Tests
+      shell: bash
+      run: |
+        go test `go list ./... | grep -v api | grep -v integration | grep -v expect`
   inttest:
     if: contains(github.event.pull_request.labels.*.name, 'run integration tests')
     name: Integration Test
     strategy:
-      fail-fast: false
       matrix:
         go-version:
         - 1.13.x
-    runs-on: windows-latest
+        platform:
+        - ubuntu-latest
+        - macos-latest
+        - windows-latest
+    runs-on: ${{ matrix.platform }}
     env:
       ACTIVESTATE_CLI_DISABLE_RUNTIME: true
       GOFLAGS: -mod=vendor
       SHELL: bash
       GITHUB_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     timeout-minutes: 25
-    needs:
-    - build
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-    - name: Download Session Artifacts
-      uses: actions/download-artifact@v2
-      with:
-        name: session-build-windows-latest
-        path: build/
     - name: Install Go
       uses: actions/setup-go@v2
       with:
@@ -201,16 +245,75 @@ jobs:
       run: state run build
     - name: Integration Tests
       shell: bash
-      run: |
-        ls -l ./build/msi
-        chmod +x ./build/msi/*.msi
-        go test --run="TestActivePerl/.*" --timeout 20m ./test/integration -v
+      run: go test -timeout 20m ./test/integration -v
       env:
         INTEGRATION_TEST_USERNAME: ${{ secrets.INTEGRATION_TEST_USERNAME }}
         INTEGRATION_TEST_PASSWORD: ${{ secrets.INTEGRATION_TEST_PASSWORD }}
-    - name: Upload log Files
-      uses: actions/upload-artifact@v2
-      if: ${{ always() }}
+  deploy:
+    name: Deploy
+    needs:
+    - build
+    - unittest
+    runs-on: ubuntu-latest
+    env:
+      ACTIVESTATE_CLI_DISABLE_RUNTIME: true
+      GOFLAGS: -mod=vendor
+      SHELL: bash
+      GITHUB_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    timeout-minutes: 10
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Install Go
+      uses: actions/setup-go@v2
       with:
-        name: activeperl-logs
-        path: ActivePerl*.log
+        go-version: ${{ matrix.go-version }}
+    - name: Setup
+      shell: bash
+      run: |
+        bin=$(pwd)/.github/deps/${{ runner.os }}/bin
+        echo "Adding $bin to PATH"
+        echo "::add-path::$bin"
+        printenv
+    - name: Download All Session Artifacts
+      uses: actions/download-artifact@v2
+      with:
+        path: build/
+    - name: Sanitize All Session Artifacts
+      shell: bash
+      run: |
+        cd build
+        find . -mindepth 2 -maxdepth 2 -print0 | xargs -0 -I file rsync -av file .
+        rm -Rf session*
+    - name: Preprocess
+      shell: bash
+      run: |
+        if [[ "${GITHUB_REF##*/}" == "master" ]]; then
+          export BRANCH_OVERRIDE=unstable
+        fi
+        state run preprocess
+    - name: Cleanup Build Dir
+      shell: bash
+      run: rm build/state* || true
+    - name: Deploy
+      shell: bash
+      if: github.ref == 'refs/heads/master'
+      run: |
+        state run deploy-updates
+        state run deploy-installers
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    - name: Cleanup Session Artifacts
+      uses: geekyeggo/delete-artifact@v1
+      with:
+        name: |
+          session-shared-build
+          session-build-ubuntu-latest
+          session-build-macos-latest
+          session-build-windows-latest
+    - name: Upload Artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: build
+        path: build/
