--- a/activestate.yaml
+++ b/activestate.yaml
@@ -223,7 +223,7 @@ scripts:
       unset ACTIVESTATE_ACTIVATED
       export INTEGRATION_TEST_USERNAME=$secrets.project.INTEGRATION_TEST_USERNAME
       export INTEGRATION_TEST_PASSWORD=$secrets.project.INTEGRATION_TEST_PASSWORD
-      go test ./test/integration -v "${@:1}"
+      go test ./test/integration -v "${@:1}" -timeout 20m
   - name: clean
     language: bash
     description: Cleans out the build dir.
