--- a/activestate.yaml
+++ b/activestate.yaml
@@ -48,9 +48,17 @@ scripts:
       $constants.SET_ENV
       export GOOS=${1}
       go build -tags "internal $GO_BUILD_TAGS" -o ${2} $constants.CLI_BUILDFLAGS $constants.CLI_PKGS
-  - name: generate-version
+  - name: generate-base-version
     language: bash
-    description: Generate version file
+    description: Generate the master version file
+    value: |
+      set -e
+      $constants.SET_ENV
+      mkdir -p build/
+      go run scripts/version-getter/main.go build/update
+  - name: generate-update-version
+    language: bash
+    description: Generate the update version file
     value: |
       set -e
       $constants.SET_ENV
