Update step name

--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -1,4 +1,4 @@
-#@ def steps_genmasterversion():
+#@ def steps_genbaseversion():
 name: "Generate Version"
 shell: bash
 run: state run generate-master-version
