run generate-update in inttest for upgen_int_test to pass

--- a/.github/workflows-src/jobs.lib.yml
+++ b/.github/workflows-src/jobs.lib.yml
@@ -80,6 +80,7 @@ steps:
   - #@ steps_setup()
   - #@ steps_preprocess()
   - #@ steps_build()
+  - #@ steps_genupdate()
   - #@ steps_inttest()
 #@ end
 
