--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -134,6 +134,7 @@ name: "Sanitize All Session Artifacts"
 shell: bash
 run: |
   cd build
+  rm -Rf session-shared-build
   find . -mindepth 2 -maxdepth 2 -print0 | xargs -0 -I file rsync -av file .
   rm -Rf session*
 #@ end
