--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -49,7 +49,7 @@ jobs:
       run: state run generate-update
     - name: Integration Tests
       shell: bash
-      run: SHELL='' go test -timeout 20m ./test/integration -v
+      run: SHELL='' go test -timeout 20m -tags 'state_int_tests' ./test/integration -v
       env:
         INTEGRATION_TEST_USERNAME: ${{ secrets.INTEGRATION_TEST_USERNAME }}
         INTEGRATION_TEST_PASSWORD: ${{ secrets.INTEGRATION_TEST_PASSWORD }}
