--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -147,10 +147,6 @@ jobs:
       env:
         CODE_SIGNING_PASSWD: ${{ secrets.CODE_SIGNING_PASSWD }}
         MSI_CERT_BASE64: ${{ secrets.MSI_CERT_BASE64 }}
-    - name: MSI Integration Tests
-      if: runner.os == 'Windows'
-      shell: bash
-      run: SHELL='' go test -timeout 10m ./test/integration -v -run='TestLanguageMsi.*'
     - name: Upload Session Artifacts
       uses: actions/upload-artifact@v2
       with:
@@ -250,13 +246,28 @@ jobs:
     - name: Generate Update
       shell: bash
       run: state run generate-update
+    - name: Build Languages MSI
+      if: runner.os == 'Windows'
+      shell: bash
+      run: |
+        echo $MSI_CERT_BASE64 | base64 --decode > Cert.p12
+        export PATH=/c/Program\ Files\ \(x86\)/Microsoft\ Visual\ Studio/2019/Enterprise/MSBuild/Current/Bin/:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
+        export SHELL=bash
+        state run build-msi-language Perl Public ActiveState/ActivePerl-5.26 5.26.3001
+        signtool.exe sign -d "ActiveState Language Installer" -f "Cert.p12" -p ${CODE_SIGNING_PASSWD} ./build/msi/ActivePerl-5.26.msi
+        state run build-msi-language Perl Public ActiveState/ActivePerl-5.28 5.28.1001
+        signtool.exe sign -d "ActiveState Language Installer" -f "Cert.p12" -p ${CODE_SIGNING_PASSWD} ./build/msi/ActivePerl-5.28.msi
+        state run build-base-language-msi
+      env:
+        CODE_SIGNING_PASSWD: ${{ secrets.CODE_SIGNING_PASSWD }}
+        MSI_CERT_BASE64: ${{ secrets.MSI_CERT_BASE64 }}
     - name: Integration Tests
       shell: bash
-      run: SHELL='' go test -timeout 20m -tags 'state_int_tests' ./test/integration -v
+      run: SHELL='' go test -timeout 20m ./test/integration -v
       env:
         INTEGRATION_TEST_USERNAME: ${{ secrets.INTEGRATION_TEST_USERNAME }}
         INTEGRATION_TEST_PASSWORD: ${{ secrets.INTEGRATION_TEST_PASSWORD }}
-        PLATFORM_API_KEY: ${{ secrets.PLATFORM_API_KEY }}
+        PLATFORM_API_TOKEN: ${{ secrets.PLATFORM_API_TOKEN }}
   deploy:
     name: Deploy
     needs:
